--- a/app/dashboard/templates/base.html
+++ b/app/dashboard/templates/base.html
@@ -79,6 +79,14 @@
                             <i class="fa fa-stethoscope"></i>&nbsp;Tests<small>&nbsp;<sup>&#946;</sup></small>
                         </a>
                     </li>
+                    
+                    <li id="li-release">
+                        <a id="tests-l" href="/release/"
+                            title="View the latest test reports (beta)">
+                            <i class="fa fa-star"></i>&nbsp;Releases<small>&nbsp;<sup>&#946;</sup></small>
+                        </a>
+                    </li>
+                    
                     <li id="li-compare">
                         <a id="compare-l" href="/compare/"
                             title="Compare jobs, builds and boots (beta)">
