--- a/app/dashboard/templates/info.html
+++ b/app/dashboard/templates/info.html
@@ -9,6 +9,10 @@
     <h4>Symbols Legend</h4>
 </div>
     <dl class="dl-horizontal">
+        <dt><a href="#"><i class="fa fa-star"></i></a></dt>
+        <dd>Indicates tests by build report</dd>
+        <dt><a href="#"><i class="fa fa-stethoscope"></i></a></dt>
+        <dd>Indicates  tests by board report</dd>
         <dt><a href="#"><i class="fa fa-sitemap"></i></a></dt>
         <dd>Indicates job and/or tree resources</dd>
         <dt><a href="#"><i class="fa fa-cube"></i></a></dt>
@@ -17,8 +21,10 @@
         <dd>Indicates boot report resources</dd>
         <dt><a href="#"><i class="fa fa-server"></i></a></dt>
         <dd>Indicates SoC resources</dd>
+        <!--
         <dt><a href="#"><i class="fa fa-th-large"></i></a></dt>
         <dd>Indicates the compare resource</dd>
+        -->
         <dt>
             <a href="#"><i class="fa fa-external-link"></i></a>
         </dt>
