--- a/app/dashboard/templates/base.html
+++ b/app/dashboard/templates/base.html
@@ -50,6 +50,7 @@
                             <i class="fa fa-home"></i>&nbsp;Home
                         </a>
                     </li>
+                    <!--
                     <li id="li-job">
                         <a id="job-l" href="/job/" title="View the latest jobs">
                             <i class="fa fa-sitemap"></i>&nbsp;Jobs
@@ -73,26 +74,27 @@
                             <i class="fa fa-server"></i>&nbsp;SoCs
                         </a>
                     </li>
+                    -->                    
+                    <li id="li-release">
+                        <a id="tests-l" href="/test-build/"
+                            title="View the latest test reports (beta)">
+                            <i class="fa fa-star"></i>&nbsp;Tests by build<small>&nbsp;<sup>&#946;</sup></small>
+                        </a>
+                    </li>
                     <li id="li-test">
                         <a id="tests-l" href="/test/"
                             title="View the latest test reports (beta)">
-                            <i class="fa fa-stethoscope"></i>&nbsp;Tests<small>&nbsp;<sup>&#946;</sup></small>
+                            <i class="fa fa-stethoscope"></i>&nbsp;Tests by board<small>&nbsp;<sup>&#946;</sup></small>
                         </a>
                     </li>
-                    
-                    <li id="li-release">
-                        <a id="tests-l" href="/release/"
-                            title="View the latest test reports (beta)">
-                            <i class="fa fa-star"></i>&nbsp;Releases<small>&nbsp;<sup>&#946;</sup></small>
-                        </a>
-                    </li>
-                    
+                    <!--
                     <li id="li-compare">
                         <a id="compare-l" href="/compare/"
                             title="Compare jobs, builds and boots (beta)">
                             <i class="fa fa-th-large"></i>&nbsp;Compare<small>&nbsp;<sup>&#946;</sup></small>
                         </a>
                     </li>
+                    -->
                     <li id="li-info">
                         <a id="info-l" href="/info/"
                             title="Want to know more about kernelci.org?">
